@@ -31,6 +31,7 @@ Bad Cats (The Cat's Meow) (MOD 1.2 & 1.3)
 Cue Ball Wizard (Spanish / Vifico license)
 Gorgar L-2 (most likely official, but unreleased so far, makes it the newest version available)
 High Speed (G-4 aka German PROTO4)
+Rollergames TA-2 (LA-2C competition MOD based Tournament Edition)
 Rolling Stones V21 (unreleased so far, makes it the newest version available)
 Soccer Kings (alternate set 2)
 Super Mario Bros. (Spanish / Vifico license) (rev.1 and (most likely) rev.2)
